Fixed horizontal scolling when navlinks are hidden on small screens

--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,7 @@
 body {
   display: flex;
   flex-direction: column;
+  overflow-x: hidden;
 
   margin: 0;
   padding: 0;
